--- a/data/map.css
+++ b/data/map.css
@@ -6,19 +6,20 @@ body {
     margin: 0px;
 }
 input[type="radio"]:checked+label{  
-    font-weight: bold; 
-    color: lightgreen;
+    font-weight: bold;
+    color: green;
     font-size: 15px;    
 }
 .outerframe {
     font:10px arial,sans-serif;
     color:#e81ce8;
     position: absolute;
-            text-shadow:
+    text-shadow:
     -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;  
+
 }
 .outerframe span{
     display:none;
@@ -52,6 +53,7 @@ input[type="radio"]:checked+label{
     padding:2px;
     background-color:red;
     z-index:100;
+    box-shadow: 3px 3px 3px #222;
 }
 .topleft{
     position:absolute;
@@ -75,23 +77,26 @@ input[type="radio"]:checked+label{
     display:none;
 }
 .outerframe:hover .innertext{
-    position:absolute;
+    position:center;
     font-size:15px;
     top:10px;
     left:10px;
     background-color:black;
     border:1px solid black;
-    padding:1px;
+    padding:5px;
     z-index:200;
+    border-radius: 7px;
+    border: 3px solid #736f65;
+    float: right;
 }
 .user {
         display:none;
- 
+
 }
 .outerframe:hover .user{
         display:inline;
 }
- 
+
 .outerframe:hover .innertext_towny{
     position:absolute;
     font-size:15px;
@@ -107,13 +112,13 @@ input[type="radio"]:checked+label{
     display:none;
     color:#ffffff;
 }
- 
+
 #outer_box {
-    position:absolute;
-    top:30px;
-    left:30px;
+    position: absolute;
+    top: 38px;
+    left: 3px;
 }
- 
+
 .map_image {
     position:absolute;
 }
@@ -133,7 +138,7 @@ input[type="radio"]:checked+label{
     background-color: rgba(255, 255, 0, 0.7);
     color: #000000;
 }
- 
+
 .hide {
     display:none;
 }
@@ -146,7 +151,7 @@ input[type="radio"]:checked+label{
 .redborder {
     border:1px solid red;
 }
- 
+
 .yellowborder {
     border:1px solid yellow;
 }
@@ -169,7 +174,66 @@ input[type="radio"]:checked+label{
     border:1px solid black;
     padding:1px;
 }
- 
+
 .center {
     text-align:center;
+}
+
+
+#menu_2d_map {
+    position:fixed;
+    z-index:999;
+    background-color:#ffffff;
+    padding: 5px 4px 5px;
+    font-family:sans-serif;
+    background: linear-gradient(#fff, #777);
+    border: 1px solid;
+    font-size: 80%;
+    width: 100%;
+    top:-2px;
+    padding-top:8px;
+    left: -1px;
+}
+
+#menu_2d_map button {
+    background: #ccc;
+}
+
+#menu_2d_map a {
+    text-decoration: none;
+}
+
+#scroll_to_icons {
+    display:inline;
+    margin-left:10px; 
+}
+
+#scroll_to_icons img{
+    top: 8px;
+    position: absolute;
+    border: 1px solid black;
+    padding:1px;
+    box-shadow: 1px 1px 2px #888888;
+}
+
+.blink_me {
+    opacity: 0.5;
+    -webkit-animation: blinker 1s linear infinite alternate;
+    -moz-animation: blinker 1s linear infinite alternate;
+    animation: blinker 1s linear infinite alternate;
+}
+
+@-webkit-keyframes blinker {  
+    from { background-color: red; }
+    to { background-color: green; }
+}
+
+@-moz-keyframes blinker {  
+    from { background-color: red; }
+    to { background-color: green; }
+}
+
+@keyframes blinker {  
+    from { background-color: red; }
+    to { background-color: green; }
 }
