--- a/data/map.css
+++ b/data/map.css
@@ -88,6 +88,7 @@ input[type="radio"]:checked+label{
     border-radius: 7px;
     border: 3px solid #736f65;
     float: right;
+    opacity: 1;
 }
 .user {
         display:none;
@@ -147,16 +148,20 @@ input[type="radio"]:checked+label{
 }
 .whiteborder {
     border:1px solid #FFFFFF;
+    opacity: 0.7;
 }
 .redborder {
     border:1px solid red;
+    opacity: 0.7;
 }
 
 .yellowborder {
     border:1px solid yellow;
+    opacity: 0.7;
 }
 .blackborder {
     border:1px solid #000000;
+    opacity: 0.7;
 }
 .innerframe {
     position: relative; top: 3px; bottom: 3px; left: 3px; right: 3px;
@@ -179,7 +184,6 @@ input[type="radio"]:checked+label{
     text-align:center;
 }
 
-
 #menu_2d_map {
     position:fixed;
     z-index:999;
@@ -197,6 +201,12 @@ input[type="radio"]:checked+label{
 
 #menu_2d_map button {
     background: #ccc;
+    border-radius: 5px;
+    border-style: groove; 
+}
+
+#menu_2d_map button:active {
+    background: linear-gradient(#ccc, #eee);
 }
 
 #menu_2d_map a {
