--- a/data/global.css
+++ b/data/global.css
@@ -239,12 +239,20 @@ div.ts3_viewer {
 }
 
 #accordion .ui-accordion-content {
-    width: 100%;
     background-color: #f3f3f3;
     color: #777;
     font-size: 10pt;
-    margin-right: 20px;
     padding: 10px;
-    padding-right: 0px;
+    padding-right: 20px;
+    margin-left: 15px;
+    padding-left: 15px;
+}
 
+#accordion {
+    margin-top: 15px;
+}
+
+#accordion .categories{
+    text-align: right;
+    font-family: monospace; 
 }
