Adding umc_jquery_tabs function for ease of development

--- a/data/global.css
+++ b/data/global.css
@@ -1,5 +1,16 @@
 /* This file defines styles for dynamic pages */
 
+/* jquery-webui-popover */
+.popover {
+  cursor: pointer;
+}
+.popover-content {
+  display: none;
+}
+.webui-popover {
+  padding-bottom: 20px;
+}
+
 .donation td{
    padding-right:4px; 
 }
