using tellraw to msg individual users misc fixes

--- a/data/global.css
+++ b/data/global.css
@@ -346,3 +346,7 @@ a .widget .bbp-author-name {
     width: 192px;
     height: 192px;
 }
+/** FAQ header bold when active **/
+.ui-accordion-header-active {
+    font-weight: bold;
+}
