--- a/data/item_sprites.css
+++ b/data/item_sprites.css
@@ -260,7 +260,7 @@
 .item_purpur_stairs_0 {background-position:-384px -672px;}
 .item_stone_slab_7 {background-position:-408px -672px;}
 .item_quartz_stairs_0 {background-position:-432px -672px;}
-.item_stone_slab_2 {background-position:-456px -672px;}
+.item_stone_slab2_0 {background-position:-456px -672px;}
 .item_red_sandstone_stairs_0 {background-position:-480px -672px;}
 .item_stone_slab_1 {background-position:-504px -672px;}
 .item_sandstone_stairs_0 {background-position:-528px -672px;}
