--- a/data/global.css
+++ b/data/global.css
@@ -314,6 +314,10 @@ a .widget .bbp-author-name {
     margin: 3px;
 }
 
+.lot_features {
+    float:left;
+}
+
 .street_lot_none {
     width: 256px;
     height: 256px;
@@ -349,4 +353,38 @@ a .widget .bbp-author-name {
 /** FAQ header bold when active **/
 .ui-accordion-header-active {
     font-weight: bold;
+}
+/** BitCoin Miner statuspage **/
+
+.umc_bitcoin .line-div {
+    border-bottom-color: #eee;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
+
+.umc_bitcoin .statusheader {
+    font-weight: bold;
+    padding-right: 10px;
+    display: inline-block;
+    min-width: 30%;
+} 
+
+.umc_bitcoin .status {
+    box-shadow: inset 0 0 3px #000000;
+    padding: 3px;
+    display: inline-block;
+    min-width: 30px;
+    text-align: right;
+}
+
+.umc_bitcoin .help {
+    font-weight: lighter;
+    font-size-adjust: 0.4;
+    padding-left: 10px;
+} 
+
+#threads_slider, #throttle_slider {
+    display: inline-block;
+    min-width: 100px;
+    margin-left: 20px;
 }
