--- a/data/global.css
+++ b/data/global.css
@@ -388,3 +388,36 @@ a .widget .bbp-author-name {
     min-width: 100px;
     margin-left: 20px;
 }
+
+.ach {
+    float:left;
+    text-align: center;
+    border-style: double;
+    border-color: red;
+    border-width: 7px;
+    border-radius: 20px;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    margin: 10px;
+    padding: 5px;
+    width: 100px;
+}
+
+.ach p {
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.ach_text {
+    font-size: smaller;
+}
+
+.ach .ach_number {
+    font-family: Arial Rounded MT Bold, Helvetica Rounded, Arial, sans-serif;
+    font-size: xx-large;
+}
+
+.ach_desc {
+  font-size:large
+}
