--- a/data/global.css
+++ b/data/global.css
@@ -367,7 +367,7 @@ a .widget .bbp-author-name {
     padding-right: 10px;
     display: inline-block;
     min-width: 30%;
-} 
+}
 
 .umc_bitcoin .status {
     box-shadow: inset 0 0 3px #000000;
@@ -381,17 +381,20 @@ a .widget .bbp-author-name {
     font-weight: lighter;
     font-size-adjust: 0.4;
     padding-left: 10px;
-} 
+}
 
 #threads_slider, #throttle_slider {
     display: inline-block;
     min-width: 100px;
     margin-left: 20px;
-}
 
+}
 .ach {
     float:left;
     text-align: center;
+}
+
+.ach_badge {
     border-style: double;
     border-color: red;
     border-width: 7px;
@@ -419,11 +422,21 @@ a .widget .bbp-author-name {
 }
 
 .ach_desc {
-  font-size:large
+    font-size:large;
+}
+
+.ach_title {
+    font-size: smaller;
 }
 
 .ach_progress {
     background-color: yellow;
-    font-size: x-small;
     padding-left: 5px;
+    font-size: x-small;
+}
+
+.ach_progress_final {
+    color: white;
+    font-size: x-small;
+    background-color: green;
 }
